src/test/deca/syntax/invalid/16_and.deca
// Description:
//    tests de non-terminal 'and': manque un &.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    if (a==0&b==0){
        print("very good");
    }
}